@@ -75,8 +75,7 @@ extern FLOAT_T sc_vol_table[];
 extern FLOAT_T sc_pan_table[], gm2_pan_table[];
 extern FLOAT_T sc_drum_level_table[];
 extern FLOAT_T sb_vol_table[];
-extern FLOAT_T modenv_attack_vol_table[];
-extern FLOAT_T modenv_decay_vol_table[];
+extern FLOAT_T modenv_vol_table[];
 extern FLOAT_T cb_to_amp_table[];
 extern FLOAT_T reverb_time_table[];
 extern FLOAT_T pan_delay_table[];
